# CE2103

./: Patrones de Diseño.odt  README.md
23-08-19/: CMakeLists.txt  main  main.cpp
25-09-19/: main.cpp
DS/: CMakeLists.txt  main.cpp
DS/BinaryTree/: BinaryTree.cpp  BinaryTree.h  TreeNode.cpp  TreeNode.h
DS/GUI/: ClientGUI.cpp  ClientGUI.hpp  arbolGUI.cpp  arbolGUI.h  listaGUI.cpp  listaGUI.h
DS/LinkedList/: LinkedList.cpp  LinkedList.h  Node.cpp  Node.h
DS/Sockets/: Client.cpp  Client.h  Message.cpp  Server.cpp  Server.h
Projecto-1-DatosII/: .~lock.database.csv#  CMakeLists.txt  Pelicula.cpp  curl_example  database.csv  main  main.cpp
Servers/: CMakeLists.txt  main.cpp  test.json
TAREA4/Tarea4/: Tarea4.pro  main.cpp  mainwindow.h  mainwindow.ui
TAREA4/build-Tarea4-Desktop_Qt_5_13_0_GCC_64bit-Debug/: Makefile  Tarea4  moc_mainwindow.cpp  ui_mainwindow.h
Tarea 1/Client/: CMakeLists.txt  frist  main.cpp
Tarea 1/Server/: CMakeLists.txt  Server.cpp  main.cpp  swap.cpp
Tarea 4/: CMakeLists.txt  main.cpp
Tareas DOCS/: Tarea 3.odt  Tarea 4.odt
Tareas DOCS/Tarea 1/: untitled  untitled.cpp
Tareas DOCS/Tarea 1/Client/: main.cpp
Tareas DOCS/Tarea 1/Server/: Server.cpp  Server.h  a.out  main.cpp
Trabajos-Varios/: Algoritmos Geneticos.odt  RAID.odt
